--- a/api/vars.env
+++ b/api/vars.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb+srv://root:root1234@cluster0-hfpak.mongodb.net/test?retryWrites=true&w=majority
+DB_URL=mongodb://localhost/list-task
